class 02: trip details

--- a/src/index.css
+++ b/src/index.css
@@ -5,3 +5,16 @@
 * {
   min-width: 0;
 }
+
+input {
+  color-scheme: dark;
+}
+
+input:-webkit-autofill {
+  -webkit-box-shadow: 0 0 0px 1000px #000 inset;
+  -webkit-text-fill-color: #FFF;
+}
+
+input:-webkit-autofill::first-line {
+  font-size: inherit;
+}
